--- a/package.json
+++ b/package.json
@@ -5,11 +5,19 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "pnpm --filter \".//packages/**\" build",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "typescript": "^4.6.4",
-    "vite": "^3.1.0"
+    "@vitejs/plugin-vue": "^3.1.2",
+    "fast-glob": "^3.2.12",
+    "typescript": "^4.8.4",
+    "vite": "^3.1.8",
+    "vue-tsc": "^1.0.9"
+  },
+  "dependencies": {
+    "@fyeeme/api": "workspace:^0.0.0",
+    "@fyeeme/util": "workspace:^0.0.0",
+    "vue": "^3.2.37"
   }
 }
